[gd_scene load_steps=6 format=3 uid="uid://xbyyj5lujknh"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_ojkes"]
[ext_resource type="Texture2D" uid="uid://cxk3icj0vblox" path="res://Assets/Screenshot_2024-04-07_at_11.52.31_PM.webp" id="2_4khuu"]
[ext_resource type="AudioStream" uid="uid://cn5icgtye7kyl" path="res://Assets/kl-peach-game-over-iii-142453.mp3" id="2_l8nr8"]

[sub_resource type="Theme" id="Theme_jhnnn"]

[sub_resource type="FontFile" id="FontFile_j4ntu"]
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/40/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="MainMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ojkes")

[node name="Menu" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -43.0
offset_right = 36.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.513726, 0.25098, 0.25098, 1)

[node name="ColorRect" type="ColorRect" parent="Menu"]
layout_mode = 0
offset_left = 24.0
offset_top = 38.0
offset_right = 1189.0
offset_bottom = 701.0
color = Color(0, 0, 0, 0.533333)

[node name="Label" type="Label" parent="Menu/ColorRect"]
layout_mode = 0
offset_left = 323.0
offset_top = 36.0
offset_right = 802.0
offset_bottom = 91.0
theme = SubResource("Theme_jhnnn")
theme_override_fonts/font = SubResource("FontFile_j4ntu")
theme_override_font_sizes/font_size = 40
text = "FRINCI AND ROSIE"
horizontal_alignment = 1

[node name="ButtonNew" type="Button" parent="Menu/ColorRect"]
layout_mode = 0
offset_left = 314.0
offset_top = 371.0
offset_right = 814.0
offset_bottom = 451.0
theme_override_font_sizes/font_size = 35
text = "New Game"

[node name="ButtonLoad" type="Button" parent="Menu/ColorRect"]
layout_mode = 0
offset_left = 313.0
offset_top = 460.0
offset_right = 813.0
offset_bottom = 540.0
theme_override_font_sizes/font_size = 35
text = "Load Game"

[node name="ButtonQuit" type="Button" parent="Menu/ColorRect"]
layout_mode = 0
offset_left = 313.0
offset_top = 550.0
offset_right = 813.0
offset_bottom = 630.0
theme_override_font_sizes/font_size = 35
text = "Quit Game"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_l8nr8")

[node name="Sprite2D" type="Sprite2D" parent="BackgroundMusic"]
position = Vector2(559, 210)
scale = Vector2(0.460207, 0.426268)
texture = ExtResource("2_4khuu")

[connection signal="pressed" from="Menu/ColorRect/ButtonNew" to="." method="_on_button_new_pressed"]
[connection signal="pressed" from="Menu/ColorRect/ButtonLoad" to="." method="_on_button_load_pressed"]
[connection signal="pressed" from="Menu/ColorRect/ButtonQuit" to="." method="_on_button_quit_pressed"]
